# app/Http/routes.php
@@ -43,6 +43,13 @@ $app->get('/', function () use ($app) {
 });
 
 /**
+ *  TopicController
+ */
+
+//$app->get('/api/topics', ['middleware' => 'auth', 'uses' => 'TopicController@topics']); // Mejor usar "public function __construct(){ $this->middleware('auth'); }" en el controlador
+$app->get('/api/topics', 'TopicController@topics');
+
+/**
  *  UserController 
  */
  
@@ -50,6 +57,11 @@ $app->post('/api/login', 'UserController@login');
 
 $app->post('/api/glogin', 'UserController@login_with_google');
 
+$app->post('/api/users/{id}/topics', 'UserController@update_topics');
+
+$app->get('/api/users/{id}/events', 'UserController@events');
+
+$app->get('/api/users/{id}/myevents', 'UserController@myevents');
 
 $app->post('/api/users/{userid}/events/{eventid}', 'UserController@attendant');
 
@@ -58,15 +70,13 @@ $app->put('/api/users/{userid}/events/{eventid}', 'UserController@checking');
 $app->put('/api/users/{userid}/events/{eventid}/{rating}', 'UserController@rating');
 
 
+
 $app->get('/api/users/{id}', 'UserController@user');
 
 $app->put('/api/users/{id}', 'UserController@update');
-
-//$app->get('/api/topics', ['middleware' => 'auth', 'uses' => 'TopicController@topics']); // Mejor usar "public function __construct(){ $this->middleware('auth'); }" en el controlador
-$app->get('/api/topics', 'TopicController@topics');
 
 $app->get('/api/events', 'EventController@events');
 
 $app->get('/api/users/{id}/topics', 'UserController@topics');
 
-$app->get('/api/users/{id}/events', 'UserController@events');
+
